hphp/hack/test/typecheck/attributes/entry_point_no_generics.php.rust_elab.exp
File "entry_point_no_generics.php", line 4, characters 15-15:
`__EntryPoint` functions cannot take arguments. (NastCheck[3085])
File "entry_point_no_generics.php", line 4, characters 15-15:
`__EntryPoint` functions cannot have generic parameters. (NastCheck[3094])
