hphp/hack/test/typecheck/attributes/entry_point_no_generics.php
<?hh

<<__EntryPoint>>
function main<T>() : void {}
